# diff-trees

./: Cargo.toml  LICENSE  README.md  default.nix  shell.nix
.github/workflows/: main.yml  release.yml  version.yml
examples/: cli.rs
nix/overlays/: local-pkgs.nix
nix/pkgs/: diff-trees.nix  make-release-commit.nix  mkCheck.nix  nix-update.nix  shell.nix
nix/pkgs/checks/: examples-cli.nix
npins/: sources.json
src/: candidate_is_same.rs  diff_entry.rs  diff_tag.rs  display_diff.rs  display_diff_opts.rs  hash_file.rs  lib.rs  path_info.rs  strip_prefix.rs
src/error/: hash.rs  metadata.rs  mod.rs  strip_prefix.rs  traverse.rs  walkdir_metadata.rs
testlib/: Cargo.toml
testlib/src/: lib.rs
