[workspace]
members = [
    "testlib"
]
resolver = "2"

# See: https://github.com/crate-ci/cargo-release/blob/master/docs/reference.md
[workspace.metadata.release]
# Set the commit message.
pre-release-commit-message = "Release {{crate_name}} version {{version}}"
consolidate-commits = false # One commit per crate.
tag = false # Don't tag commits.
push = false # Don't do `git push`.
publish = false # Don't do `cargo publish`.

[package]
name = "diff-trees"
version = "0.1.0"
edition = "2024"

[dependencies]
blake3 = { version = "1.8.2", features = ["mmap"] }
iddqd = { version = "0.3.11", default-features = false, features = ["std"] }
owo-colors = "4.2.2"
tracing = "0.1.41"
walkdir = "2.5.0"

[dev-dependencies]
indoc = "2.0.6"
testlib = { path = "testlib" }
